# tjr103

./: .gitignore  README.md
airflow-demo/: README.md
airflow-demo/dags/: d_01_example_dag.py  d_02_example_dag_dependency.py  d_03_example_pass_parameters.py  (+7 more)
data_pipeline/: 01_pandas_practice.ipynb  02_text_to_dataframe.ipynb  03_preview_catagory.ipynb  04_deal_with_nan.ipynb  05_determine_dtype.ipynb  06_pandas_sql_join.ipynb  07_pandas_melt.ipynb  08_cumcount.ipynb  09_pandasql.ipynb  10_pymysql_connection.ipynb  11_pandas_read_sql.ipynb  pandas_practice.csv  pandas_practice_no_col.csv  pyproject.toml  tmp.jsonl  tmp.py
demo_poetry/: pyproject.toml
docker/: airflow-docker-compose.yaml  docker-compose.yaml  flask.Dockerfile
docs/: Tibame 20250923 docker afternoon.md  Tibame 20250923 docker morning.md  Tibame 20251003 datapipeline afternoon.md  Tibame 20251003 datapipeline night.md  Tibame 20251003 docker morning.md  Tibame 20251008 datapipeline night.md  Tibame 20251018 datapipeline afternoon.md  Tibame 20251018 datapipeline morning.md  Tibame 20251022 datapipeline night.md  Tibame 20251101 datapipeline afternoon.md  Tibame 20251101 gcp morning.md  Tibame 20251102 datapipeline morning.md  Tibame 20251102 gcp afternoon.md  Tibame 20251108 gcp afternoon.md  Tibame 20251108 gcp morning.md  Tibame_20251122_GCP_morning.md  tibame_20251116_gcp_morning.md
flask_demo/: app.py  model.py  pyproject.toml
gcp/: .gitignore  01_bigquery_client.ipynb  02_pygsheets.ipynb  03_secret_manager.ipynb  external_partition_table.sql  pyproject.toml  secret_dev.json  secret_prod.json
gcp/demo_partition/dt=2024-05-08/: sale.csv
gcp/docker-demo/: flask.Dockerfile
gcp/external_table/: product.jsonl  sale.csv
interview_question/: 01.ipynb  order_data.md  sql_test_01.md  system_design.md
selenium-demo/: pyproject.toml  selenium-demo.py
(+3 files in other folders)
